--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,63 @@
         max-width: 300px;
         min-height: 24px;
       }
+
+      .spinner {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 100;
+        background: rgba(233, 110, 80, .25);
+      }
+
+      .spinner-inner {
+        width: 40px;
+        height: 40px;
+
+        position: relative;
+        margin: 100px auto;
+      }
+
+      .double-bounce1, .double-bounce2 {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background-color: rgb(233, 110, 80);
+        opacity: 0.6;
+        position: absolute;
+        top: 0;
+        left: 0;
+        
+        -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+        animation: sk-bounce 2.0s infinite ease-in-out;
+      }
+
+      .double-bounce2 {
+        -webkit-animation-delay: -1.0s;
+        animation-delay: -1.0s;
+      }
+
+      @-webkit-keyframes sk-bounce {
+        0%, 100% { -webkit-transform: scale(0.0) }
+        50% { -webkit-transform: scale(1.0) }
+      }
+
+      @keyframes sk-bounce {
+        0%, 100% {
+          transform: scale(0.0);
+          -webkit-transform: scale(0.0);
+        } 50% {
+          transform: scale(1.0);
+          -webkit-transform: scale(1.0);
+        }
+      }
+
+      tr.active:nth-child(even), tr.active, :root tr:active:nth-child(even), :root tr:active {
+        color: #fff;
+        background-color: rgb(233, 110, 80);
+      }
     </style>
     <script type="text/javascript">
       function viewComponentTree(node) {
