--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Songbee desktop</title>
-    <link rel="stylesheet" href="../node_modules/photon/dist/css/photon.css" media="screen">
+    <link rel="stylesheet" href="../../node_modules/photon/dist/css/photon.css" media="screen">
+    <script type="text/javascript" src="../../node_modules/babel-polyfill/dist/polyfill.js"></script>
     <style>
       .window {
         height: 100%;
